--- a/run_configs/config.json
+++ b/run_configs/config.json
@@ -6,23 +6,26 @@
   [
     {
       "down_sample_method":"voxel",
-      "down_sample_param":0.01,
+      "down_sample_param":0.05,
       "normal_estimation_neighbours":30,
       "normal_estimation_radius":0.1,
       "skip_normalizing_normals":false,
       "orient_normals": 0,
       "surface_reconstruction_algorithm":"alpha_shapes",
-      "alpha":0.1,
+      "alpha":0.2,
       "ball_pivoting_radii":[0.1, 0.05, 0.02, 0.01],
       "poisson_density_quantile":0.1,
       "poisson_octree_max_depth":8,
       "mesh_cleaning_methods":["simple", "edge_length", "aspect_ratio"],
       "edge_length_clean_portion":0.99,
       "aspect_ratio_clean_portion":0.99,
-      "mesh_quality_metrics":"all",
+      "mesh_quality_metrics":["normal_deviations"],
       "mesh_to_cloud_metrics":"all",
       "store_preprocessed_pointcloud":false,
-      "store_mesh":false
-    }   
+      "store_mesh":false,
+      "triangle_normal_deviation_method":"naive",
+      "processes":1,
+      "chunk_size":50000
+    }
   ]
 }
