Made point cloud path relative

--- a/run_configs/config.json
+++ b/run_configs/config.json
@@ -1,5 +1,5 @@
 {
-  "point_cloud_path":"C:\\Users\\Gabi\\master-thesis\\master-thesis\\data\\etvr\\enfsi-2023_reduced_cloud.pcd",
+  "point_cloud_path":"etvr\\enfsi-2023_reduced_cloud.pcd",
   "verbose": true,
   "draw": true,
   "copy": true,
