--- a/master-thesis-reconstruction/run_configs/config.json
+++ b/master-thesis-reconstruction/run_configs/config.json
@@ -7,13 +7,13 @@
   [
     {
       "down_sample_method":"voxel",
-      "down_sample_params":0.01,
+      "down_sample_params":0.05,
       "normal_estimation_neighbours":30,
       "normal_estimation_radius":0.1,
       "skip_normalizing_normals":false,
       "orient_normals": 0,
-      "surface_reconstruction_method":"alpha_shapes",
-      "alpha":0.2,
+      "surface_reconstruction_method":"spsr",
+      "alpha":0.5,
       "ball_pivoting_radii":[0.1, 0.05, 0.02, 0.01],
       "poisson_density_quantile":0.1,
       "poisson_octree_max_depth":8,
@@ -25,7 +25,8 @@
       "store_mesh":true,
       "triangle_normal_deviation_method":"adj",
       "processes":1,
-      "chunk_size":50000
+      "chunk_size":50000,
+	  "reuse_pointcloud":true
     },
     {
       "alpha": 0.3
