--- a/master-thesis-reconstruction/run_configs/config.json
+++ b/master-thesis-reconstruction/run_configs/config.json
@@ -11,7 +11,7 @@
       "normal_estimation_neighbours":30,
       "normal_estimation_radius":0.1,
       "skip_normalizing_normals":false,
-      "orient_normals": 0,
+      "orient_normals": 30,
       "surface_reconstruction_method":"spsr",
       "alpha":0.5,
       "ball_pivoting_radii":[0.1, 0.05, 0.02, 0.01],
@@ -29,16 +29,13 @@
 	  "reuse_pointcloud":true
     },
     {
-      "alpha": 0.3
+      "surface_reconstruction_method":"a"
+	},
+    {
+      "surface_reconstruction_method":"b"
     },
     {
-      "alpha": 0.4
-    },
-    {
-      "alpha": 0.5
-    },
-    {
-      "alpha": 1
+      "surface_reconstruction_method":"d"
     }
   ]
 }
