--- a/master-thesis-reconstruction/run_configs/config.json
+++ b/master-thesis-reconstruction/run_configs/config.json
@@ -7,26 +7,171 @@
   [
     {
       "down_sample_method":"voxel",
-      "down_sample_params":0.05,
-      "normal_estimation_neighbours":30,
-      "normal_estimation_radius":0.1,
+      "down_sample_params":0.01,
+      "normal_estimation_neighbours":1,
+      "normal_estimation_radius":"auto",
       "skip_normalizing_normals":false,
-      "orient_normals": 30,
-      "surface_reconstruction_method":"d",
-      "alpha":0.5,
-      "ball_pivoting_radii":[0.1, 0.05, 0.02, 0.01],
-      "poisson_density_quantile":0.1,
-      "poisson_octree_max_depth":8,
+      "orient_normals":1,
+      "surface_reconstruction_method":"spsr",
+      "alpha":0.056,
+      "ball_pivoting_radii":[0.001,0.009,0.024,0.048,0.1],
+      "poisson_density_quantile":0.05,
+      "poisson_octree_max_depth":10,
       "mesh_cleaning_methods":["simple", "edge_length", "aspect_ratio"],
-      "edge_length_cleaning_portion":0.95,
-      "aspect_ratio_cleaning_portion":0.95,
-      "mesh_quality_metrics":["c"],
+      "edge_length_cleaning_portion":1,
+      "aspect_ratio_cleaning_portion":1,
+      "mesh_quality_metrics":["ar", "el", "c", "h", "ch", "m2cd"],
       "store_preprocessed_pointcloud":false,
       "store_mesh":true,
       "triangle_normal_deviation_method":"adj",
-      "processes":1,
+      "processes":0,
       "chunk_size":50000,
-	  "reuse_pointcloud":true
-    }
+	  "reuse_pointcloud":false
+    },
+	{
+	  "normal_estimation_neighbours":2,
+      "orient_normals":2,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":3,
+      "orient_normals":3,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":4,
+      "orient_normals":4,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":5,
+      "orient_normals":5,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":6,
+      "orient_normals":6,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":7,
+      "orient_normals":7,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":8,
+      "orient_normals":8,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":9,
+      "orient_normals":9,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":10,
+      "orient_normals":10,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":11,
+      "orient_normals":11,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":12,
+      "orient_normals":12,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":13,
+      "orient_normals":13,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":14,
+      "orient_normals":14,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":15,
+      "orient_normals":15,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":16,
+      "orient_normals":16,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":17,
+      "orient_normals":17,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":18,
+      "orient_normals":18,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":19,
+      "orient_normals":19,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":20,
+      "orient_normals":20,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":21,
+      "orient_normals":21,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":22,
+      "orient_normals":22,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":23,
+      "orient_normals":23,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":24,
+      "orient_normals":24,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":25,
+      "orient_normals":25,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":26,
+      "orient_normals":26,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":27,
+      "orient_normals":27,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":28,
+      "orient_normals":28,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":29,
+      "orient_normals":29,
+	  "surface_reconstruction_method":"spsr"
+	},
+	{
+	  "normal_estimation_neighbours":30,
+      "orient_normals":30,
+	  "surface_reconstruction_method":"spsr"
+	}
   ]
 }
