--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 *.pcd
 *.e57
 master-thesis-reconstruction/data/dummy/stanford-dragon/dragon_recon/README
+/master-thesis-segmentation/regionGrowingOctree/__pycache__
+/master-thesis-segmentation/regionGrowingOctree/__pycache__
