--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ master-thesis-reconstruction/data/dummy/stanford-dragon/dragon_recon/README
 /master-thesis-segmentation/regionGrowingOctree/__pycache__
 *.npz
 master-thesis-reconstruction/run_configs/results.csv
+/master-thesis-reconstruction/data
