--- a/master-thesis-segmentation/environment.yml
+++ b/master-thesis-segmentation/environment.yml
@@ -6,10 +6,8 @@ dependencies:
   - bzip2=1.0.8=h2bbff1b_5
   - ca-certificates=2024.3.11=haa95532_0
   - icc_rt=2022.1.0=h6049295_2
-  - intel-openmp=2023.1.0=h59b6b97_46320
   - joblib=1.2.0=py310haa95532_0
   - libffi=3.4.4=hd77b12b_0
-  - mkl=2023.1.0=h6b88ed4_46358
   - mkl-service=2.4.0=py310h2bbff1b_1
   - mkl_fft=1.3.8=py310h2bbff1b_0
   - mkl_random=1.2.4=py310h59b6b97_0
@@ -22,7 +20,6 @@ dependencies:
   - scipy=1.12.0=py310h8640f81_0
   - setuptools=68.2.2=py310haa95532_0
   - sqlite=3.41.2=h2bbff1b_0
-  - tbb=2021.8.0=h59b6b97_0
   - threadpoolctl=2.2.0=pyh0d69192_0
   - tk=8.6.12=h2bbff1b_0
   - tzdata=2024a=h04d1e81_0
@@ -50,9 +47,12 @@ dependencies:
       - executing==2.0.1
       - fast-hdbscan==0.1.3
       - fastjsonschema==2.19.1
+      - filelock==3.13.1
       - flask==3.0.2
+      - fsspec==2024.2.0
       - idna==3.6
       - importlib-metadata==7.1.0
+      - intel-openmp==2021.4.0
       - ipython==8.22.2
       - ipywidgets==8.1.2
       - itsdangerous==2.1.2
@@ -65,12 +65,16 @@ dependencies:
       - llvmlite==0.42.0
       - markupsafe==2.1.5
       - matplotlib-inline==0.1.6
+      - mkl==2021.4.0
+      - mpmath==1.3.0
       - nbformat==5.10.3
       - nest-asyncio==1.6.0
+      - networkx==3.2.1
       - numba==0.59.1
       - open3d==0.18.0
       - packaging==24.0
       - parso==0.8.3
+      - pillow==10.2.0
       - platformdirs==4.2.0
       - plotly==5.20.0
       - prompt-toolkit==3.0.43
@@ -84,7 +88,11 @@ dependencies:
       - rpds-py==0.18.0
       - six==1.16.0
       - stack-data==0.6.3
+      - sympy==1.12
+      - tbb==2021.11.0
       - tenacity==8.2.3
+      - torch==2.2.2+cu118
+      - torch-scatter==2.1.2+pt22cu118
       - traitlets==5.14.2
       - typing-extensions==4.10.0
       - urllib3==2.2.1
