Testing with HDBSCAN

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ master-thesis-reconstruction/run_configs/results.csv
 /master-thesis-reconstruction/data
 /master-thesis-segmentation/pointnetexternal/data
 /master-thesis-reconstruction/run_configs
+*.pyc
+*.pyc
+/master-thesis-segmentation/pointnetexternal/models/__pycache__
