Improved HDBSCAN running

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ master-thesis-reconstruction/run_configs/results.csv
 *.pyc
 /master-thesis-segmentation/pointnetexternal/models/__pycache__
 /master-thesis-segmentation/results
+master-thesis-segmentation/pointnetexternal/models/__pycache__/pointnet2_sem_seg.cpython-310.pyc
+master-thesis-segmentation/regionGrowingOctree/__pycache__/RegionGrowingOctree.cpython-310.pyc
+master-thesis-segmentation/regionGrowingOctree/__pycache__/RegionGrowingOctreeNode.cpython-310.pyc
