--- a/master-thesis-segmentation/environment.yml
+++ b/master-thesis-segmentation/environment.yml
@@ -1,13 +1,17 @@
 name: master-thesis-segmentation
 channels:
+  - pytorch
+  - conda-forge
   - defaults
 dependencies:
   - blas=1.0=mkl
   - bzip2=1.0.8=h2bbff1b_5
   - ca-certificates=2024.3.11=haa95532_0
   - icc_rt=2022.1.0=h6049295_2
+  - intel-openmp=2023.1.0=h59b6b97_46320
   - joblib=1.2.0=py310haa95532_0
   - libffi=3.4.4=hd77b12b_0
+  - mkl=2023.1.0=h6b88ed4_46358
   - mkl-service=2.4.0=py310h2bbff1b_1
   - mkl_fft=1.3.8=py310h2bbff1b_0
   - mkl_random=1.2.4=py310h59b6b97_0
@@ -20,6 +24,7 @@ dependencies:
   - scipy=1.12.0=py310h8640f81_0
   - setuptools=68.2.2=py310haa95532_0
   - sqlite=3.41.2=h2bbff1b_0
+  - tbb=2021.8.0=h59b6b97_0
   - threadpoolctl=2.2.0=pyh0d69192_0
   - tk=8.6.12=h2bbff1b_0
   - tzdata=2024a=h04d1e81_0
@@ -29,7 +34,10 @@ dependencies:
   - xz=5.4.6=h8cc25b3_0
   - zlib=1.2.13=h8cc25b3_0
   - pip:
+      - aiohttp==3.9.5
+      - aiosignal==1.3.1
       - asttokens==2.4.1
+      - async-timeout==4.0.3
       - attrs==23.2.0
       - blinker==1.7.0
       - certifi==2024.2.2
@@ -43,19 +51,19 @@ dependencies:
       - dash-html-components==2.0.0
       - dash-table==5.0.0
       - decorator==5.1.1
-      - exceptiongroup==1.2.0
+      - exceptiongroup==1.2.1
       - executing==2.0.1
       - fast-hdbscan==0.1.3
       - fastjsonschema==2.19.1
-      - filelock==3.13.1
-      - flask==3.0.2
-      - fsspec==2024.2.0
-      - idna==3.6
+      - filelock==3.13.4
+      - flask==3.0.3
+      - frozenlist==1.4.1
+      - fsspec==2024.3.1
+      - idna==3.7
       - importlib-metadata==7.1.0
-      - intel-openmp==2021.4.0
-      - ipython==8.22.2
+      - ipython==8.23.0
       - ipywidgets==8.1.2
-      - itsdangerous==2.1.2
+      - itsdangerous==2.2.0
       - jedi==0.19.1
       - jinja2==3.1.3
       - jsonschema==4.21.1
@@ -64,42 +72,43 @@ dependencies:
       - jupyterlab-widgets==3.0.10
       - llvmlite==0.42.0
       - markupsafe==2.1.5
-      - matplotlib-inline==0.1.6
-      - mkl==2021.4.0
+      - matplotlib-inline==0.1.7
       - mpmath==1.3.0
-      - nbformat==5.10.3
+      - multidict==6.0.5
+      - nbformat==5.10.4
       - nest-asyncio==1.6.0
-      - networkx==3.2.1
+      - networkx==3.3
       - numba==0.59.1
       - open3d==0.18.0
       - packaging==24.0
-      - parso==0.8.3
-      - pillow==10.2.0
-      - platformdirs==4.2.0
-      - plotly==5.20.0
+      - parso==0.8.4
+      - platformdirs==4.2.1
+      - plotly==5.21.0
       - prompt-toolkit==3.0.43
+      - psutil==5.9.8
       - pure-eval==0.2.2
       - pygments==2.17.2
       - pymorton==1.0.5
+      - pyparsing==3.1.2
       - pywin32==306
-      - referencing==0.34.0
+      - referencing==0.35.0
       - requests==2.31.0
       - retrying==1.3.4
       - rpds-py==0.18.0
       - six==1.16.0
       - stack-data==0.6.3
       - sympy==1.12
-      - tbb==2021.11.0
       - tenacity==8.2.3
-      # - torch==2.2.2+cu118
-      # - torch-scatter==2.1.2+pt22cu118
-      - torch==2.2.2
-      - torch-scatter==2.1.2
-      - traitlets==5.14.2
-      - typing-extensions==4.10.0
+      - torch==2.2.2+cu118
+      - torch-geometric==2.5.3
+      - torch-scatter==2.1.2+pt21cu118
+      - tqdm==4.66.2
+      - traitlets==5.14.3
+      - typing-extensions==4.11.0
       - urllib3==2.2.1
       - wcwidth==0.2.13
-      - werkzeug==3.0.1
+      - werkzeug==3.0.2
       - widgetsnbextension==4.0.10
+      - yarl==1.9.4
       - zipp==3.18.1
-prefix: C:\ProgramData\anaconda3\envs\master-thesis-segmentation
+prefix: C:\Users\admin\.conda\envs\master-thesis-segmentation
