First version of readme and some additions to io of segmentation part

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ master-thesis-reconstruction/run_configs/office-alpha-shapes-4/config.json
 master-thesis-reconstruction/run_configs/office-alpha-shapes-4/results.csv
 /master-thesis-reconstruction/build
 /master-thesis-reconstruction/dist
+/master-thesis-segmentation/build
+/master-thesis-segmentation/dist
